# web2llm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  flake.nix  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-to-pypi.yml  test.yml
tests/: conftest.py  test_scrapers.py
web2llm/: cli.py  config.py  default_config.yaml  output.py  utils.py
web2llm/scrapers/: __init__.py  base_scraper.py  generic_scraper.py  github_scraper.py  local_folder_scraper.py  pdf_scraper.py
web_to_llm/: cli.py  config.py
web_to_llm/scrapers/: local_folder_scraper.py  pdf_scraper.py
web_to_llm_pkg/: config.py  output.py  utils.py
web_to_llm_pkg/scrapers/: __init__.py  base_scraper.py  generic_scraper.py  github_scraper.py  local_folder_scraper.py  local_pdf_scraper.py  pdf_scraper.py
