[project]
name = "web-to-llm"
version = "0.1.0"
description = "A tool to scrape web content into clean Markdown for LLMs."
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["scraper", "llm", "markdown", "web scraping", "pdf", "github"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Environment :: Console",
]

dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "markdownify",
    "GitPython",
    "pdfplumber",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/web-to-llm"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/web-to-llm/issues"

[project.scripts]
web-to-llm = "web_to_llm.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]
dev = [
    "ruff",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["web_to_llm*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]